--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -34,9 +34,9 @@
   </a>
   {% endif %}
 
-  {% if site.dev_username != null %}
-  <a class="social-link black" aria-label="My DEV" target="_blank" rel="noreferrer"
-    href="https://dev.to/{{site.dev_username}}">
+  {% if site.htb_username != null %}
+  <a class="social-link black" aria-label="My HackTheBox" target="_blank" rel="noreferrer"
+    href="https://app.hackthebox.com/users/1825939">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#dev" | prepend: site.baseurl }}"></use>
@@ -44,6 +44,18 @@
     </div>
   </a>
   {% endif %}
+
+  {% if site.thm_username != null %}
+  <a class="social-link black" aria-label="My TryHackMe" target="_blank" rel="noreferrer"
+    href="https://tryhackme.com/p/{{site.thm_username}}">
+    <div class="social">
+      <svg class="social-svg" viewBox="0 0 48 48">
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#dev" | prepend: site.baseurl }}"></use>
+      </svg>
+    </div>
+  </a>
+  {% endif %}
+
 
   {% if site.linkedin_username != null %}
   <a class="social-link linkedin" aria-label="My LinkedIn" target="_blank" rel="noreferrer"
