--- a/_includes/section-skills.html
+++ b/_includes/section-skills.html
@@ -2,13 +2,13 @@
 
 <div id="skills">
   <input type="radio" id="all" name="filter" checked />
-  <label class="filter-button neumorphism-button" for="all">All</label>
+  <label class="filter-button Shevanio-button" for="all">All</label>
   <input type="radio" id="language" name="filter" />
-  <label class="filter-button neumorphism-button" for="language">Languages</label>
+  <label class="filter-button Shevanio-button" for="language">Languages</label>
   <input type="radio" id="framework" name="filter" />
-  <label class="filter-button neumorphism-button" for="framework">Frameworks</label>
+  <label class="filter-button Shevanio-button" for="framework">Frameworks</label>
   <input type="radio" id="tool" name="filter" />
-  <label class="filter-button neumorphism-button" for="tool">Tools</label>
+  <label class="filter-button Shevanio-button" for="tool">Tools</label>
 
   {% for language in site.data.skills-languages %}
     <div skill-type="language" skill-weight="{{language.weight}}" data-aos="zoom-in">
