--- a/_includes/section-timeline.html
+++ b/_includes/section-timeline.html
@@ -14,21 +14,21 @@
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="hexagon"></span>
-              <span class="flag neumorphism-button" data-aos="zoom-in-right">
+              <span class="flag Shevanio-button" data-aos="zoom-in-right">
                 <a href="{{event.title-url}}" target="_blank" rel="noreferrer">
                   <span>{{event.title}}</span>
                 </a>
               </span>
               <span class="time-wrapper" data-aos="zoom-in-right">
-                <span class="time neumorphism-card">{{event.date}}</span>
+                <span class="time Shevanio-card">{{event.date}}</span>
               </span>
             </div>
-            <div class="desc neumorphism-card" data-aos="zoom-in-right">
+            <div class="desc Shevanio-card" data-aos="zoom-in-right">
               {{event.subtitle}}
               {% if event.tags %}
                 <div class="tag-wrapper">
                   {% for tag in event.tags %}
-                    <span class="tag neumorphism-card">{{tag.tag}}</span>
+                    <span class="tag Shevanio-card">{{tag.tag}}</span>
                   {% endfor %}
                 </div>
               {% endif %}
@@ -42,21 +42,21 @@
           <div class="direction-r">
             <div class="flag-wrapper">
               <span class="hexagon"></span>
-              <span class="flag neumorphism-button" data-aos="zoom-in-left">
+              <span class="flag Shevanio-button" data-aos="zoom-in-left">
                 <a href="{{event.title-url}}" target="_blank" rel="noreferrer">
                   <span>{{event.title}}</span>
                 </a>
               </span>
               <span class="time-wrapper" data-aos="zoom-in-left">
-                <span class="time neumorphism-card">{{event.date}}</span>
+                <span class="time Shevanio-card">{{event.date}}</span>
               </span>
             </div>
-            <div class="desc neumorphism-card" data-aos="zoom-in-left">
+            <div class="desc Shevanio-card" data-aos="zoom-in-left">
               {{event.subtitle}}
               {% if event.tags %}
                 <div class="tag-wrapper">
                   {% for tag in event.tags %}
-                    <span class="tag neumorphism-card">{{tag.tag}}</span>
+                    <span class="tag Shevanio-card">{{tag.tag}}</span>
                   {% endfor %}
                 </div>
               {% endif %}
