--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,27 +33,27 @@
   {% include landing-page.html %}
   <div class="layout">
     {%if site.show_aboutme_card %}
-      <section class="card neumorphism-card-big">
+      <section class="card Shevanio-card-big">
         {% include section-aboutme.html %}
       </section>
     {% endif %}
     {%if site.show_skills_card %}
-      <section class="card neumorphism-card-big">
+      <section class="card Shevanio-card-big">
         {% include section-skills.html %}
       </section>
     {% endif %}
     {%if site.show_timeline_card %}
-      <section class="card neumorphism-card-big">
+      <section class="card Shevanio-card-big">
         {% include section-timeline.html %}
       </section>
     {% endif %}
     {%if site.show_projects_card %}
-      <section class="card neumorphism-card-big">
+      <section class="card Shevanio-card-big">
         {% include section-projects.html %}
       </section>
     {% endif %}
     {%if site.show_contact_card %}
-    <section class="card neumorphism-card-big">
+    <section class="card Shevanio-card-big">
       {% include section-contact.html %}
     </section>
     {% endif %}
