--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -106,7 +106,7 @@ a {
   text-align: justify;
 }
 
-.neumorphism-button {
+.Shevanio-button {
   background: linear-gradient(
     145deg,
     rgba(100, 100, 105, 0.15) 15%,
@@ -116,7 +116,7 @@ a {
     4px 4px 2px 0 rgba(0, 0, 0, 0.4);
 }
 
-@mixin neumorphism-button-pressed {
+@mixin Shevanio-button-pressed {
   background: linear-gradient(
     150deg,
     rgba(20, 20, 20, 0.4) 10%,
@@ -127,12 +127,12 @@ a {
     inset -1px -2px 2px rgba(210, 210, 210, 0.4);
 }
 
-.neumorphism-card {
+.Shevanio-card {
   box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 1),
     inset -2px -2px 4px rgba(99, 99, 99, 1);
 }
 
-.neumorphism-card-big {
+.Shevanio-card-big {
   box-shadow: 5px 5px 4px #161718, -5px -5px 4px #404346;
 }
 
@@ -729,7 +729,7 @@ a {
     input[type="radio"]:checked + .filter-button {
       color: $primary-color;
       font-weight: $font-weight-strong;
-      @include neumorphism-button-pressed();
+      @include Shevanio-button-pressed();
     }
 
     input[id="language"]:checked ~ div[skill-type="framework"],
