--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -74,7 +74,7 @@
 
       {% if site.thm_username != null %}
       <a class="social-link" aria-label="My TryHackMe" target="_blank" rel="noreferrer"
-        href="https://tryhackme.com/p/shevanio"
+        href="https://tryhackme.com/p/{{site.thm_username}}"
       >
         <svg viewBox="0 0 200 200" class="circle">
           <circle cx="100" cy="100" r="80" />
