--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -39,7 +39,7 @@
     href="https://app.hackthebox.com/users/1825939">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#dev" | prepend: site.baseurl }}"></use>
+        <use x="0" y="0" width="48" height="48" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#hackthebox" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
@@ -50,7 +50,7 @@
     href="https://tryhackme.com/p/{{site.thm_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#dev" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#tryhackme" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
@@ -76,6 +76,7 @@
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#twitter" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
+    <span class="label">HackTheBox</span>
   </a>
   {% endif %}
 </div>
