--- a/_includes/section-timeline_education.html
+++ b/_includes/section-timeline_education.html
@@ -1,10 +1,10 @@
 <h1 class="title">{{site.timeline_title_education}}</h1>
-<p class="subtitle">
+<!-- <p class="subtitle">
   For more information, have a look at my
   <a class="highlight-link" href="{{site.cv_download_link_education}}" target="_blank" rel="noreferrer">
     curriculum vitae
   </a>.
-</p>
+</p> -->
 
 <div class="timeline-wrapper">
   <ul class="timeline">
