--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -40,7 +40,7 @@
         </a>
       {% endif %}
 
-      {% if site.codepen_username != null %}
+      <!-- {% if site.codepen_username != null %}
         <a class="social-link" aria-label="My Codepen" target="_blank" rel="noreferrer"
           href="https://codepen.io/{{site.codepen_username}}"
         >
@@ -86,7 +86,7 @@
         </div>
         <span class="label">TryHackMe</span>
       </a>
-    {% endif %}
+    {% endif %} -->
 
       {% if site.linkedin_username != null %}
         <a class="social-link linkedin" aria-label="My LinkedIn" target="_blank"
