Remove innecesary links

--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -23,7 +23,7 @@
   </a>
   {% endif %}
 
-  {% if site.codepen_username != null %}
+  <!-- {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
     href="https://codepen.io/{{site.codepen_username}}">
     <div class="social">
@@ -54,7 +54,7 @@
       </svg>
     </div>
   </a>
-  {% endif %}
+  {% endif %} -->
 
 
   {% if site.linkedin_username != null %}
